update README, add TODO

--- a/README
+++ b/README
@@ -9,3 +9,9 @@ Logger makes the following assumptions:
 Implementation:
 Using rsync would have been preferable, and is still possible with a file system in user space implementation. I have taken what was simpler to me, doing a very basic syncing based on a last synced date recorded in a file. I use the posix and socket lua extensions. Tested with openwrt 12.09 and lua 5.1.2
 
+OpenWRT instructions:
+opkg install luasocket luaposix
+mkdir /root/.ssh
+chmod 700 /root/.ssh
+dropbearkey -t rsa /root/.ssh/id_rsa
+
